src/objects/AccountMasterCharge__c.object
<CustomObject>
    <fields>
        <fullName>AccountMasterRef__c</fullName>
        <label>会計商品</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>商品手数料情報</relationshipLabel>
        <relationshipName>AccountMasterChargeRef</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <label>手数料%</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MemberType__c</fullName>
        <label>会員種別</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>G_MemberType</valueSetName>
        </valueSet>
    </fields>
    <label>商品手数料情報</label>
    <nameField>
        <displayFormat>AC-{0000000000}</displayFormat>
        <label>会計手数料番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>